@@ -1,3 +1,8 @@
+2005-04-03  Paolo Borelli  <pborelli@katamail.com>
+
+	* gedit-application-server.c:
+	* bonobo-mdi.c: make sure that active_window is set appropriately.
+
 2005-04-03  Benoît Dejean  <TazForEver@dlfp.org>
 
 	* gedit-languages-manager.c: (string_to_tag_style): Fixed a leak.
